@@ -144,6 +144,7 @@ ot_add_source_file (RiceFactory.cxx)
 ot_add_source_file (Skellam.cxx)
 ot_add_source_file (SkellamFactory.cxx)
 ot_add_source_file (SmoothedUniform.cxx)
+ot_add_source_file (SmoothedUniformFactory.cxx)
 ot_add_source_file (SquaredNormal.cxx)
 ot_add_source_file (Student.cxx)
 ot_add_source_file (StudentCopula.cxx)
