@@ -62,6 +62,7 @@
 #include "openturns/RayleighFactory.hxx"
 #include "openturns/RiceFactory.hxx"
 #include "openturns/SkellamFactory.hxx"
+#include "openturns/SmoothedUniformFactory.hxx"
 #include "openturns/StudentFactory.hxx"
 #include "openturns/TrapezoidalFactory.hxx"
 #include "openturns/TriangularFactory.hxx"
@@ -103,6 +104,7 @@ DistributionFactory::DistributionFactoryCollection DistributionFactory::GetConti
   collection.add(ParetoFactory());
   collection.add(RayleighFactory());
   collection.add(RiceFactory());
+  collection.add(SmoothedUniformFactory());
   collection.add(StudentFactory());
   collection.add(TrapezoidalFactory());
   collection.add(TriangularFactory());
