@@ -1,0 +1,11 @@
+// SWIG file SmoothedUniformFactory.i
+
+%{
+#include "openturns/SmoothedUniformFactory.hxx"
+%}
+
+%include SmoothedUniformFactory_doc.i
+
+%copyctor OT::SmoothedUniformFactory;
+
+%include openturns/SmoothedUniformFactory.hxx
